name:                cardano-streamer
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/cardano-streamer#readme>
homepage:            https://github.com/lehins/cardano-streamer
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2023 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 9.2.7

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Streamer.Common
                     , Cardano.Streamer.Producer
                     , Cardano.Streamer.ProtocolInfo

                    -- TODO: finish and reinstate when `io-classes-1.0` is in use.
                    --
                    -- Older version had injective type families on MonadSTM, which
                    -- disallowed instance for RIO
                    --
                    -- , Cardano.Streamer.RIO

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , async
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , conduit
                     , contra-tracer
                     , ouroboros-consensus
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-diffusion
                     , ouroboros-network-api
                     , io-classes
                     , nothunks
                     , rio
                     , serialise
                     , transformers
                     , unliftio

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


-- executable cardano-streamer
--   main-is: Main.hs
--   other-modules:
--       Paths_cardano_streamer
--   hs-source-dirs:     app
--   ghc-options:        -Wall
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wredundant-constraints
--                       -O2
--                       -threaded
--                       -rtsopts
--                       -with-rtsopts=-N
--   build-depends:      base
--                     , cardano-streamer
--   default-language: Haskell2010

-- test-suite doctests
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   tests
--   main-is:          doctests.hs
--   build-depends: base
--                , doctest >=0.15
--                , cardano-streamer
--   default-language:    Haskell2010
--   ghc-options:        -Wall
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wredundant-constraints
--                       -threaded

-- test-suite tests
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     tests
--   main-is:            Main.hs
--   other-modules:      Common
--                     , LibSpec
--                     , Spec
--   build-tool-depends: hspec-discover:hspec-discover
--   build-depends:      base
--                     , cardano-streamer
--                     , hspec
--                     , QuickCheck

--   default-language:   Haskell2010
--   ghc-options:        -Wall
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wredundant-constraints
--                       -fno-warn-orphans
--                       -threaded
--                       -with-rtsopts=-N2

-- benchmark bench
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Bench.hs
--   ghc-options:         -Wall
--                        -threaded
--                        -O2
--                        -with-rtsopts=-N
--   build-depends:       base
--                      , criterion
--                      , cardano-streamer
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/cardano-streamer
