name:                cardano-streamer
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/cardano-streamer#readme>
homepage:            https://github.com/lehins/cardano-streamer
license:             Apache-2.0
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2023 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 9.2.7

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Streamer.Common
                     , Cardano.Streamer.Benchmark
                     , Cardano.Streamer.BlockInfo
                     , Cardano.Streamer.Ledger
                     , Cardano.Streamer.LedgerState
                     , Cardano.Streamer.Producer
                     , Cardano.Streamer.ProtocolInfo
                     , Cardano.Streamer.Time

                    -- TODO: finish and reinstate when `io-classes-1.0` is in use.
                    --
                    -- Older version had injective type families on MonadSTM, which
                    -- disallowed instance for RIO
                    --
                    -- , Cardano.Streamer.RIO

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , async
                     , bytestring
                     , base16-bytestring
                     , cardano-api
                     , cardano-addresses
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-ledger-api
                     , cardano-ledger-alonzo
                     , cardano-ledger-allegra
                     , cardano-ledger-babbage
                     , cardano-ledger-byron
                     , cardano-ledger-core >= 1.3
                     , cardano-ledger-shelley
                     , cardano-protocol-tpraos
                     , cardano-slotting
                     , cassava
                     , conduit
                     , containers
                     , contra-tracer
                     , criterion-measurement
                     , FailT
                     , ouroboros-consensus
                     -- , ouroboros-consensus-byron
                     -- , ouroboros-consensus-shelley
                     , ouroboros-consensus-protocol
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-diffusion
                     , ouroboros-network-api
                     , io-classes
                     , nothunks
                     , rio
                     , serialise
                     , text
                     , transformers
                     , unliftio
                     , vector
                     , sop-core
                     , sop-extras

                     , cardano-ledger-binary
                     , cardano-ledger-babbage
                     , ouroboros-consensus-protocol

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


executable cstreamer
  main-is: Main.hs
  other-modules:
      CLI
      Paths_cardano_streamer
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N1
  build-depends:      base
                    , cardano-streamer
                    , ouroboros-consensus
                    , optparse-applicative
                    , rio
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/cardano-streamer
