cabal-version:       3.0
name:                cardano-streamer
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/cardano-streamer#readme>
homepage:            https://github.com/lehins/cardano-streamer
license:             Apache-2.0
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2023-2025 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 9.2.7

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Streamer.Common
                     -- , Cardano.Streamer.Consumer
                     , Cardano.Streamer.Benchmark
                     , Cardano.Streamer.BlockInfo
                     , Cardano.Streamer.Inspection
                     , Cardano.Streamer.Ledger
                     , Cardano.Streamer.LedgerState
                     , Cardano.Streamer.Measure
                     , Cardano.Streamer.Producer
                     , Cardano.Streamer.ProtocolInfo
                     , Cardano.Streamer.Rewards
                     , Cardano.Streamer.RTS
                     , Cardano.Streamer.Run
                     , Cardano.Streamer.Storage
                     , Cardano.Streamer.Time

                    -- TODO: finish and reinstate when `io-classes-1.0` is in use.
                    --
                    -- Older version had injective type families on MonadSTM, which
                    -- disallowed instance for RIO
                    --
                    -- , Cardano.Streamer.RIO

  other-modules:
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , async
                     , bytestring
                     , base16-bytestring
                     , cardano-api ^>= 10.20
                     , cardano-addresses
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-data
                     , cardano-ledger-api
                     , cardano-ledger-alonzo >= 1.8
                     , cardano-ledger-allegra
                     , cardano-ledger-babbage
                     , cardano-ledger-binary
                     , cardano-ledger-byron
                     , cardano-ledger-core ^>= 1.18
                     , cardano-ledger-shelley
                     , cardano-ledger-conway >= 1.18.1
                     , cardano-protocol-tpraos
                     , cardano-slotting
                     , cassava
                     , conduit
                     , containers
                     , contra-tracer
                     , criterion-measurement
                     , FailT
                     , strict-sop-core
                     , ouroboros-consensus >= 0.28.0.0
                     , ouroboros-consensus-protocol
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-diffusion
                     , ouroboros-network-api
                     , io-classes
                     , nothunks
                     , profunctors
                     , resource-registry
                     -- prevent falling into bug in mconcat for Utf8Builder
                     , rio <0.1.23 || >=0.1.24
                     , serialise
                     , small-steps
                     , text
                     , time
                     , transformers
                     , unliftio
                     , vector
                     , sop-core
                     , sop-extras

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


executable cstreamer
  main-is: Main.hs
  other-modules:
      CLI
      Paths_cardano_streamer
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N1
  build-depends:      base
                    , cardano-crypto-class
                    , cardano-ledger-core
                    , cardano-streamer
                    , cardano-slotting
                    , ouroboros-consensus
                    , optparse-applicative
                    , rio
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/cardano-streamer
